--- a/android/src/main/res/xml/bgd_file_paths.xml
+++ b/android/src/main/res/xml/bgd_file_paths.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths>
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
     <external-path
         name="external-path"
         path="."/>
@@ -11,7 +11,7 @@
         path="."/>
     <files-path
         name="files_path"
-        path="app_flutter"/>
+        path="."/>
     <cache-path
         name="cache-path"
         path="."/>
